Added Href to Button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="docs">
                 <h1 class="title">Get Started</h1>
                 <p class="description">Get started with JARVIS using our documentation. In it, we cover the basics of JARVIS - how JARVIS works, the  commands JARVIS can answer also with a simple installation process. The documentation also includes solutions to problems you might enounter with JARVIS.</p>
-                <a href="" class="link">Documentation</a>
+                <a href="https://j-a-r-v-i-s-ai.github.io/docs/" class="link">Documentation</a>
             </div>
             <div class="contacts">
                 <h1 class="title">Get in Contact With Me</h1>
