Added Info to Footer

--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
             <div class="grid-element">
                 <h1 class="title">Updates</h1>
                 <div class="update">
-                    <h1 class="version">v0.1</h1>
-                    <h2 class="date">25 Apr</h2>
-                    <p class="description">Added Speech Recognition</p>
+                    <h1 class="version">v0.5</h1>
+                    <h2 class="date">19 Oct</h2>
+                    <p class="description">Scheduling Capabailities</p>
                 </div>
                 <div class="update">
-                    <h1 class="version">v0.1</h1>
-                    <h2 class="date">25 Apr</h2>
-                    <p class="description">Added Speech Recognition</p>
+                    <h1 class="version">v0.4</h1>
+                    <h2 class="date">16 Oct</h2>
+                    <p class="description">Can Now Close Apps</p>
                 </div>
             </div>
             <div class="grid-element">
