--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 <body>
 <header>
+    <input type="checkbox" class="nav-toggle" id="nav-toggle">
+        <div class="hamburger">
+            <div class="bar"></div>
+        </div>
     <img src="JARVIS.png">
     <nav class="nav">
         <ul class="nav-list">
@@ -64,11 +68,11 @@
             <div class="contacts">
                 <h1 class="title">Get in Contact With Me</h1>
                 <p class="description" style="float:right; width:100%;">Get in contact with us using the following links below. Mention any new features we could add to JARVIS by heading over to GitHub. Connect with me via Linkedin or email me using the button below</p>
-                <div class="social-media">
-                    <a href="https://github.com/J-A-R-V-I-S-ai" class="social-media-link"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/rudra-sekhri-02162219b/" class="social-media-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="mailto:rudrasekhri@gmail.com" class="social-media-link"><i class="fas fa-envelope"></i></a>
-                </div>
+                <ul class="social-media">
+                    <li><a href="https://github.com/J-A-R-V-I-S-ai" class="social-media-link"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/rudra-sekhri-02162219b/" class="social-media-link"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="mailto:rudrasekhri@gmail.com" class="social-media-link"><i class="fas fa-envelope"></i></a></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -104,11 +108,11 @@
             <div class="grid-element">
                 <h1 class="title">Contacts</h1>
                 <p class="description">Check out the JARVIS app on GitHub. Connect with me via Linkedin or through email</p>
-                <div class="social-media">
-                    <a href="https://github.com/J-A-R-V-I-S-ai" class="social-media-link"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/rudra-sekhri-02162219b/" class="social-media-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="mailto:rudrasekhri@gmail.com" class="social-media-link"><i class="fas fa-envelope"></i></a>
-                </div>
+                <ul class="social-media">
+                    <li><a href="https://github.com/J-A-R-V-I-S-ai" class="social-media-link"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/rudra-sekhri-02162219b/" class="social-media-link"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="mailto:rudrasekhri@gmail.com" class="social-media-link"><i class="fas fa-envelope"></i></a></li>
+                </ul>
             </div>
         </div>
         <p class="copyright">Copyright &copy; 2020. All Rights Reserved. Developed by Rudra Sekhri.</p>
