Added Updates Section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
             </div>
         </div>
     </div>
+<div class="updates">
+    <div class="grid">
+        <div class="grid-element update1">
+            <h1 class="title">v0.5</h1>
+            <p class="description">- Be able to tell local and international time</p>
+            <p class="description">- Scheduler and Timetabler capabilities. Now, JARVIS can schedule events tasks and events. JARVIS can also remind you of tasks or events that are approaching their respective deadlines.</p>
+            <p class="description">- Location and Map Capabilities. Now can locate any address using Google Maps. Also responds to commands like 'search restaurants near me', etc.</p>
+            <a href="" class="link">Download</a></div>
+        <div class="grid-element update2">
+            <h1 class="title">v0.4</h1>
+            <p class="description">- Basic calc functions. Now JARVIS can add, subtract, multiply, divide, raise a number to a power, etc.</p>
+            <a href="" class="link">Download</a></div>
+        <div class="grid-element update3">
+            <h1 class="title">v0.3</h1>
+            <p class="description">- Able to get weather from any location</p>
+            <a href="" class="link">Download</a></div>
+        <div class="grid-element update4">
+            <h1 class="title">v0.2</h1>
+            <p class="description">- Revised J.A.R.V.I.S' voice and added time capabilities</p>
+            <a href="" class="link">Download</a></div>
+    </div>
+</div>
     <div class="footer">
         <div class="grid">
             <div class="grid-element">
