--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <ul class="social-media">
                     <li><a href="https://github.com/J-A-R-V-I-S-ai" class="social-media-link"><i class="fab fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/rudra-sekhri-02162219b/" class="social-media-link"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="mailto:rudrasekhri@gmail.com" class="social-media-link"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="mailto:rudrathegreat@gmail.com" class="social-media-link"><i class="fas fa-envelope"></i></a></li>
                 </ul>
             </div>
         </div>
